--- a/foundations/intro-to-css/01-css-methods/solution/solution.css
+++ b/foundations/intro-to-css/01-css-methods/solution/solution.css
@@ -5,3 +5,15 @@ div {
   text-align: center;
   font-weight: bold;
 }
+
+
+/* style.css */
+
+
+div {
+    background-color: red; 
+    color: white;
+    font-size: 32px;
+    text-align: center;
+    font-weight: bold;
+}
