--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,20 @@
 /* Add CSS Styling */
+
+.cool-botton.cooler-botton{
+    font-size: 28px;
+    font-family: Helvetica,'Times New Roman',sans-serif;
+}
+
+.cool-botton{
+
+    background-color: #000000;
+    color: #ffffff;
+}
+
+.cooler-botton{
+    background-color: #ffff00;
+}
+
+/* - **The first element**: a black background and white text
+- **The second element**: a yellow background
+- **Both elements**: a font size of 28px and a list of fonts containing `Helvetica` and `Times New Roman`, with `sans-serif` as a fallback */
