--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -1,1 +1,13 @@
 /* Add CSS Styling */
+
+.container .text{
+    color: #ff0000;
+    background-color: #ffff00;
+    font-size: 20px;
+    text-align: center;
+}
+
+
+
+/* * Only the `p` elements that are descendants of the `div` element 
+should have a yellow background, red text, a font size of 20px, and center aligned. */
